исправлены слабые места
